Switch FS9→FSX: major bug fixes (@, multi-week)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,6 +11,16 @@
 			"presentation": {
 				"reveal": "never"
 			},
+			"group": "build",
+			"label": "npm: watch",
+			"detail": "tsc -watch -p ./"
+		},
+		{
+			"type": "npm",
+			"script": "package",
+			"problemMatcher": [],
+			"label": "npm: package",
+			"detail": "vsce package",
 			"group": {
 				"kind": "build",
 				"isDefault": true
