--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"displayName": "FS AI Tools",
 	"description": "A bag of tools for AI flightplans and .cfg files",
 	"version": "1.1.2",
+	"icon": "icon.png",
 	"license": "",
 	"engines": {
 		"vscode": "^1.59.0"
