--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	},
 	"displayName": "FS AI Tools",
 	"description": "A bag of tools for AI flightplans and .cfg files",
-	"version": "1.2.2",
+	"version": "1.3.0",
 	"icon": "icon.png",
 	"license": "",
 	"engines": {
@@ -509,6 +509,13 @@
 						"default": false,
 						"title": "Add to Context Menu",
 						"markdownDescription": "Adds the \"Generate Airports\" command to the context menu when a `Flightplan….txt` file is open.",
+						"scope": "window"
+					},
+					"fs-ai-tools.generateAirports.masterAirportsFilePath": {
+						"type": "string",
+						"default": "",
+						"title": "Master Airports File Path",
+						"markdownDescription": "Full path to a master airports file. Will be used to select airport data.",
 						"scope": "window"
 					}
 				}
