--- a/package.json
+++ b/package.json
@@ -692,11 +692,11 @@
 	"devDependencies": {
 		"@types/lodash": "^4.14.178",
 		"@types/mocha": "^9.1.0",
-		"@types/node": "^17.0.18",
-		"tslint": "^5.20.1",
+		"@types/node": "^17.0.19",
+		"@types/vscode": "^1.64.0",
+		"tslint": "^6.1.3",
 		"typescript": "^4.5.5",
-		"vsce": "^2.6.7",
-		"vscode": "^1.1.37"
+		"vsce": "^2.6.7"
 	},
 	"dependencies": {
 		"fs": "~0.0.1-security",
