--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	},
 	"displayName": "FS AI Tools",
 	"description": "A bag of tools for AI flightplans and .cfg files",
-	"version": "1.3.0",
+	"version": "1.3.1",
 	"icon": "icon.png",
 	"license": "",
 	"engines": {
@@ -643,6 +643,20 @@
 						"title": "Add to Context Menu",
 						"markdownDescription": "Adds the \"Rebase AC#s\" command to the context menu when a `Flightplan….txt` file is open and text has been selected.",
 						"scope": "window"
+					},
+					"fs-ai-tools.rebaseAircraftNumbers.emptyLinesBetweenGroupsAircraftTxt": {
+						"type": "integer",
+						"default": 1,
+						"minimum": 1,
+						"description": "A new group is recognized in the `Aircraft….txt` file after this number of empty lines.",
+						"scope": "window"
+					},
+					"fs-ai-tools.rebaseAircraftNumbers.emptyLinesBetweenGroupsFlightplansTxt": {
+						"type": "integer",
+						"default": 1,
+						"minimum": 1,
+						"description": "A new group is recognized in the `Flightplans….txt` file after this number of empty lines.",
+						"scope": "window"
 					}
 				}
 			},
@@ -686,14 +700,14 @@
 		"compile": "tsc -p ./",
 		"watch": "tsc -watch -p ./",
 		"package": "vsce package",
-		"postinstall": "node ./node_modules/vscode/bin/install",
-		"test": "npm run compile && node ./node_modules/vscode/bin/test"
+		"test": "npm run ./src/test/runTest"
 	},
 	"devDependencies": {
 		"@types/lodash": "^4.14.178",
 		"@types/mocha": "^9.1.0",
 		"@types/node": "^17.0.19",
 		"@types/vscode": "^1.64.0",
+		"@vscode/test-electron": "^2.1.2",
 		"tslint": "^6.1.3",
 		"typescript": "^4.5.5",
 		"vsce": "^2.6.7"
